# lua_c

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
docs/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt  main.c  main.cpp
examples/scripts/: main.lua
include/lua_c_lib/: lua.hpp  luac.h  luac.hpp
lua_c_lib/: CMakeLists.txt
tests/: CMakeLists.txt  main.cpp
tests/scripts/: get_variables.lua  lua_c_function.lua  lua_function.lua
